Fixed z-index of the header

--- a/css/style.css
+++ b/css/style.css
@@ -499,6 +499,7 @@ body {
   padding-top: 32px;
   padding-bottom: 33px;
   position: fixed;
+  z-index: 2;
   width: 100%;
   background-color: #fafafa;
 }
@@ -764,7 +765,7 @@ body {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 992px) {
   .feature__content-container {
     margin-left: 30px;
     margin-right: 15px;
@@ -1009,6 +1010,13 @@ body {
   padding-top: 26px;
 }
 
+@media (max-width: 768px) {
+  .blogs__subtitle {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
 .blogs__poster-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1062,6 +1070,12 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .poster__description {
+    padding-left: 40px;
+  }
+}
+
 .poster__name {
   font-size: 14px;
   margin-bottom: -35px;
@@ -1080,7 +1094,7 @@ body {
 
 @media (max-width: 576px) {
   .poster__title {
-    padding: 20px 0;
+    padding: 20px 20px 20px 0;
   }
 }
 
