--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -35,7 +35,7 @@
       text-align: center;
     }
 
-    @media (min-width: $screen-s) and (max-width: $screen-s-max) {
+    @media (min-width: $screen-s) and (max-width: $screen-md) {
       margin-left: 30px;
       margin-right: 15px;
     }
