--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@
   padding-top: 32px;
   padding-bottom: 33px;
   position: fixed;
+  z-index: 2;
   width: 100%;
   background-color: $color-light-grey;
 
